--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <style>
 body{
   background-color: pink;
+  background-image: url("https://images.unsplash.com/photo-1520052205864-92d242b3a76b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80");
 }
 .serif {
   font-family: Georgia; 
@@ -34,6 +35,9 @@ body{
 .incorrect{
   background:red;
 }
+ol{
+  background-color:pink;
+}
 </style>
 
   
@@ -44,14 +48,17 @@ body{
 </head>
 
 <body translate="no" >
-  <h1>hello world &#129409 </h1>  
+  <img
+     src="https://thefader-res.cloudinary.com/images/w_1600,c_limit,f_auto,q_auto:eco/z4gjvymylqa289vyd2va/nin-design-artifacts-trent-reznor.jpg" alt="nine inch nails" width="300"/>
+<h1>hello world &#129409 </h1>  
 <ol>
   <li>2 + 2 = <input data-correct="4" /></li>
   <li>6 / 3 = <input data-correct="2" /></li>
   <li>What is the square root of 16? <input data-correct="4"/></li>
   <li>What's my name? <input data-correct="Anika"/></li>
   <li>4 * 3 = <input data-correct="12" /></li> 
-  <li>What city are we in? <input data-correct="Seattle" /></li> 
+  <li>What city are we in? <input data-correct="Seattle" /></li>
+  <li>What's my favorite color? <input data-correct="purple" /></li> 
 </ol>
   
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
