--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@ ol{
   <li>4 * 3 = <input data-correct="12" /></li> 
   <li>What city are we in? <input data-correct="Seattle" /></li>
   <li>What's my favorite color? <input data-correct="purple" /></li> 
+  <li>3 + 9 = <input data-correct="12" /></li> 
+  <li>What's my zodiac sign? <input data-correct="Sagittarius" /></li> 
+  <li>8 * 3 = <input data-correct="24" /></li> 
 </ol>
   
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
